--- a/CSS/grid3.css
+++ b/CSS/grid3.css
@@ -7,3 +7,52 @@
 .container > div:nth-child(odd) {
   background: rgb(83, 83, 255);
 }
+
+/*Grid Layout*/
+.container {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 1em;
+  justify-items: stretch; /*Default*/
+  align-items: stretch; /*Default*/
+}
+
+/* .box1 {
+  align-self: start;
+  justify-self: start;
+}
+
+.box2 {
+  align-self: end;
+}
+
+.box3 {
+  align-self: end;
+  justify-self: end;
+}
+
+.box4 {
+  align-self: end;
+  justify-self: center;
+} */
+
+.box1 {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.box2 {
+  grid-column: 3;
+  grid-row: 1/3;
+}
+
+.box3 {
+  grid-column: 2/4;
+  grid-row: 3;
+}
+
+.box4 {
+  grid-column: 1;
+  grid-row: 2/4;
+}
